--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
                         </ul>
                     </div>
                     <div class="skills__item">
-                        <p class="skills__text skills__box">HTML, CSS, JavaScript, Sass, Git, React</p>
+                        <div class="skills__box">
+                            <p class="skills__text">HTML, CSS, JavaScript</p>
+                            <p class="skills__text">Experience with React.js</p>
+                            <p class="skills__text">Version Control Systems (Git)</p>
+                            <p class="skills__text">Knowledge of responsive web design</p>
+                            <p class="skills__text">CSS preprocessors (Sass)</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -73,10 +79,15 @@
             <a class="footer__text hover" href="mailto:snatasham@ukr.net">snatasham@ukr.net</a>
             <div class="footer__social flex">
                 <a class="footer__social-link" href="#">
-                    <img src="./img/linkedin.svg" alt="linkedin">
+                    <svg width="28" height="28" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21.25 0.75H1.75C1.35218 0.75 0.970645 0.908033 0.689343 1.18934C0.408033 1.47065 0.25 1.85218 0.25 2.25V21.75C0.25 22.1478 0.408033 22.5293 0.689343 22.8106C0.970645 23.092 1.35218 23.25 1.75 23.25H21.25C21.6478 23.25 22.0293 23.092 22.3106 22.8106C22.592 22.5293 22.75 22.1478 22.75 21.75V2.25C22.75 1.85218 22.592 1.47065 22.3106 1.18934C22.0293 0.908033 21.6478 0.75 21.25 0.75ZM6.91525 19.9455H3.5305V9.1875H6.91525V19.9455ZM5.2225 7.71075C4.83338 7.70955 4.45333 7.59307 4.13036 7.37604C3.80739 7.159 3.55598 6.85111 3.4079 6.49126C3.2598 6.13142 3.22167 5.73575 3.29832 5.35425C3.37496 4.97275 3.56293 4.62251 3.8385 4.34777C4.11407 4.07304 4.46488 3.88613 4.84661 3.81065C5.22835 3.73517 5.62389 3.77451 5.98328 3.92369C6.34268 4.07287 6.6498 4.32522 6.86587 4.64885C7.0819 4.97248 7.19725 5.35288 7.19725 5.742C7.19732 6.00107 7.14633 6.25762 7.04703 6.49691C6.94774 6.73621 6.80219 6.95355 6.61872 7.13646C6.43524 7.31938 6.21747 7.46426 5.97787 7.56285C5.73827 7.6614 5.48157 7.71165 5.2225 7.71075ZM19.4657 19.9455H16.15V14.742C16.15 13.4768 16.15 11.9295 14.3875 11.9295C12.625 11.9295 12.4127 13.266 12.4127 14.6715V20.016H9.1V9.1875H12.202V10.6642H12.2725C12.5925 10.1111 13.0567 9.65535 13.6156 9.34568C14.1746 9.03608 14.8071 8.88412 15.4457 8.90625C18.8305 8.90625 19.465 11.1562 19.465 14.0392L19.4657 19.9455Z" fill="#fbe8f7"/>
+                    </svg>
                 </a>
                 <a class="footer__social-link" href="#">
-                    <img src="./img/github.svg" alt="github">
+                    <svg width="28" height="28" viewBox="0 -3.1 2490.3 2493" width="2494" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse cx="1245.2" cy="1243.4" fill="none" rx="1217.6" ry="1246.5"/>
+                        <path d="m1245.2 1.6c-687.6 0-1245.2 557.4-1245.2 1245.1 0 550.2 356.8 1016.9 851.5 1181.5 62.2 11.5 85.1-27 85.1-59.9 0-29.7-1.2-127.8-1.7-231.8-346.4 75.3-419.5-146.9-419.5-146.9-56.6-143.9-138.3-182.2-138.3-182.2-113-77.3 8.5-75.7 8.5-75.7 125 8.8 190.9 128.3 190.9 128.3 111.1 190.4 291.3 135.3 362.3 103.5 11.2-80.5 43.4-135.4 79.1-166.5-276.6-31.5-567.3-138.3-567.3-615.4 0-135.9 48.6-247 128.3-334.2-12.9-31.3-55.5-157.9 12.1-329.4 0 0 104.6-33.5 342.5 127.6 99.3-27.6 205.8-41.4 311.7-41.9 105.8.5 212.4 14.3 311.9 41.9 237.7-161.1 342.1-127.6 342.1-127.6 67.8 171.5 25.1 298.2 12.2 329.5 79.8 87.2 128.1 198.3 128.1 334.2 0 478.2-291.3 583.6-568.6 614.4 44.7 38.6 84.5 114.4 84.5 230.6 0 166.6-1.4 300.7-1.4 341.7 0 33.1 22.4 72 85.5 59.7 494.5-164.8 850.8-631.4 850.8-1181.4 0-687.7-557.5-1245.1-1245.1-1245.1" fill="#fbe8f7"/>
+                    </svg>
                 </a>
             </div>
         </footer>
